# llm-use-cases

./: .gitignore  .pre-commit-config.yaml  checkov.yaml
CV_hybrid_RAG/: BLOG.md  README.md  requirements.txt
CV_hybrid_RAG/data/: job_roles.json  sample_cvs.json
CV_hybrid_RAG/lambda/: Dockerfile  (+2 more)
chatbot/: Dockerfile  README.md  ecr-build-push.sh  requirements.txt
chatbot_litellm/: BLOG.md  Dockerfile.litellm  README.md  config.yaml  requirements.txt
fitness_chatbot_litellm/: README.md  config.yaml
image_and_video/: .gitignore  Dockerfile  README.md  architecture_diagram.drawio  ci-cd.yml  ecr-build-push.sh  pyproject.toml
image_and_video/app/: __init__.py  auth.py  canvas.py  config.py  main.py  processors.py  requirements.txt  streamlit_app.py  ui.py  utils.py  video.py
image_and_video/docs/: cognito_setup.md
image_and_video/src/image_and_video/: auth.py  config.py  llm.py  main.py  requirements.txt  sports_classifier.py  ui.py  utils.py
image_and_video/src/image_and_video.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
image_and_video/terragrunt/: data.tf  main.tf  terragrunt.hcl  variables.tf
image_and_video/tests/: conftest.py  test_canvas.py  test_video.py
image_and_video/tests/image_and_video/: test_llm.py
litellm/: Dockerfile.base
litellm_arize/: BLOG.md  Dockerfile.litellm  README.md  config.yaml  requirements.txt  terraform._example.tfvars
patient_bookings/: BLOG.md  README.md  requirements.txt
sports_marketing/: .pre-commit-config.yaml  Dockerfile  requirements.txt
translation/: README.md  requirements.txt
(+142 files in other folders)
